# mcp_homework

./: .gitignore  README.md  main.py  pyproject.toml  search.py  test.py  test_mcp_local.py
tests/: search.py  test.py  test_main.py
